--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -45,6 +45,20 @@ scrape_configs:
       - targets: ['localhost:9090']
         labels: {'host': 'host1'}
 
+  - job_name: 'snmp'
+    static_configs:
+      - targets:
+        - 192.168.0.254  # SNMP device.
+    metrics_path: /snmp
+    params:
+      module: [router]
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: 192.168.0.11:9116  # The SNMP exporter's real hostname:port.
   # see https://github.com/prometheus/blackbox_exporter relabel 
   - job_name: 'service'
     scrape_interval: 60s
