--- a/logging/docker-compose.yml
+++ b/logging/docker-compose.yml
@@ -62,6 +62,8 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:${ELK_TAG}
     expose:
       - 9200
+    ports:
+      - 9200:9200
     restart: always
     command: elasticsearch -Etransport.host=127.0.0.1 -Ebootstrap.memory_lock=false
     labels:
