--- a/monitoring/docker-compose.mysecure.yml
+++ b/monitoring/docker-compose.mysecure.yml
@@ -32,6 +32,12 @@ services:
       file: docker-compose.yml
       service: blackboxprober
 
+  snmpexporter:
+    extends:
+      file: docker-compose.yml
+      service: snmpexporter
+
+
   grafana:
     extends:
       file: docker-compose.yml
