blackbox configuration changes

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -118,6 +118,8 @@ services:
 #########################################################
   blackboxprober:
     image: prom/blackbox-exporter:v0.10.0
+    cap_add:
+      - NET_RAW
     volumes:
       - ./blackboxprober:/etc/blackbox_exporter
     ports:
