--- a/monitoring/blackboxprober/config.yml
+++ b/monitoring/blackboxprober/config.yml
@@ -4,6 +4,7 @@ modules:
     prober: http
     timeout: 10s
     http:
+      preferred_ip_protocol: ip4
   http_post_2xx:
     prober: http
     timeout: 10s
@@ -36,6 +37,8 @@ modules:
       - expect: "PING :([^ ]+)"
         send: "PONG ${1}"
       - expect: "^:[^ ]+ 001"
-  icmp:
+  icmp_ipv4:
     prober: icmp
     timeout: 5s
+    icmp:    
+      preferred_ip_protocol: ip4
