--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     logging:
       driver: gelf
       options:
-        gelf-address: udp://172.16.0.38:12201
+        gelf-address: ${GELF_ADDRESS:-SUBFAIL}
         labels: container_group
 
 #########################################################
@@ -39,7 +39,7 @@ services:
     logging:
       driver: gelf
       options:
-        gelf-address: udp://172.16.0.38:12201
+        gelf-address: ${GELF_ADDRESS:-SUBFAIL}
         labels: container_group
 
 #########################################################
@@ -70,28 +70,29 @@ services:
     logging:
       driver: gelf
       options:
-        gelf-address: udp://172.16.0.38:12201
+        gelf-address: ${GELF_ADDRESS:-SUBFAIL}
         labels: container_group
 
 #########################################################
 
   # Pretty frontend to explore and check out all your metrics.
   grafana:
-    image: grafana/grafana:4.4.1
+    image: grafana/grafana:5.2.2
     expose:
       - 3000
-    volumes:
-      - ../storage/grafana:/var/lib/grafana
+#    volumes:
+#      - ../storage/grafana:/var/lib/grafana
     restart: always
+    user: "104"
     labels:
       container_group: monitoring
     logging:
       driver: gelf
       options:
-        gelf-address: udp://172.16.0.38:12201
+        gelf-address: ${GELF_ADDRESS:-SUBFAIL}
         labels: container_group
-    environment:
-      - GF_SECURITY_ADMIN_USER=admin
+#    environment:
+#      - GF_SECURITY_ADMIN_USER=admin
 
 #########################################################
 
@@ -112,7 +113,7 @@ services:
     logging:
       driver: gelf
       options:
-        gelf-address: udp://172.16.0.38:12201
+        gelf-address: ${GELF_ADDRESS:-SUBFAIL}
         labels: container_group
 
 #########################################################
@@ -130,7 +131,7 @@ services:
     logging:
       driver: gelf
       options:
-        gelf-address: udp://172.16.0.38:12201
+        gelf-address: ${GELF_ADDRESS:-SUBFAIL}
         labels: container_group
 
   snmpexporter:
@@ -142,11 +143,27 @@ services:
     restart: always
     labels:
       container_group: monitoring
-#    logging:
-#      driver: gelf
-#      options:
-#        gelf-address: udp://172.16.0.38:12201
-#        labels: container_group
+    logging:
+      driver: gelf
+      options:
+        gelf-address: ${GELF_ADDRESS:-SUBFAIL}
+        labels: container_group
+
+  # Alertmanager messages to discord
+  alertmanager-discord:
+    image: funkypenguin/alertmanager-discord
+    expose:
+      - 9094
+    restart: always
+    labels:
+      container_group: monitoring
+    environment:
+      - DISCORD_WEBHOOK=${ALERTMANAGER_DISCORD_WEBHOOK:-SUBFAIL} 
+    logging:
+      driver: gelf
+      options:
+        gelf-address: ${GELF_ADDRESS:-SUBFAIL} 
+        labels: container_group
 
 #########################################################
 ####                   Networking                    ####
@@ -164,61 +181,3 @@ networks:
   # topbeat (Metrics for ELK):
   # collectd (Alternative for metric collection on nodes):
 
-
-  #### Alternative for Prometheus as a datastore:
-  # influxdb:
-  #   container_name: influxdb
-  #   image: influxdb
-  #   expose:
-  #     - 8083
-  #     - 8086
-  #   hostname: influxdb
-  #   # volumes:
-  #   #   - influxdb:/var/lib/influxdb
-  #   restart: always
-  #   labels:
-  #     container_group: monitoring
-  #   logging:
-  #     driver: gelf
-  #     options:
-  #       gelf-address: udp://localhost:12201
-  #       labels: monitoring
-
-
-  #### Example for another endpoint for Prometheus:
-  # couchdbstats:
-  # container_name: couchdbstats
-  # image: gesellix/couchdb-exporter
-  # expose:
-  #   - 9984
-  # hostname: couchdbstats
-  # restart: always
-  # labels:
-  #   container_group: monitoring
-  # logging:
-  #   driver: gelf
-  #   options:
-  #     gelf-address: udp://logstash:12201
-  #     labels: container_group
-  # command: -couchdb.uri=http://couchdb:5984
-
-
-  #### Get a free datadog account to have a look at their dashboards for inspiration:
-  #   datadog:
-  #   container_name: datadog
-  #   image: datadog/docker-dd-agent
-  #   hostname: datadog
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #     - /proc/:/host/proc/:ro
-  #     - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
-  #   restart: always
-  #   labels:
-  #     container_group: monitoring
-  #   logging:
-  #     driver: gelf
-  #     options:
-  #       gelf-address: udp://localhost:12201
-  #       labels: container_group
-  #   environment:
-  #     - API_KEY=
