--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -11,10 +11,7 @@ global:
 
 # Load and evaluate rules in this file every  gc'evaluation_interval' seconds.
 rule_files:
-  - "rules/alert.rules_nodes"
-  - "rules/alert.rules_containers"
-  - "rules/alert.rules_container-groups"
-  - "rules/alert.rules_sites"
+  - "rules/alert.*"
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
