--- a/monitoring/alertmanager/config.yml
+++ b/monitoring/alertmanager/config.yml
@@ -2,8 +2,8 @@
 route:
   receiver: 'logstash'
   repeat_interval: 3h #3h
-  group_interval: 5m #5m
-  group_wait: 1m #1m
+  group_interval: 10m #5m
+  group_wait: 5m #1m
   routes:
   - receiver: 'logstash'
     continue: true
@@ -13,6 +13,7 @@ receivers:
 - name: 'discord'
   webhook_configs:
   - url: 'http://alertmanager-discord:9094'
+    send_resolved: true
 - name: 'logstash'
   webhook_configs:
   # Whether or not to notify about resolved alerts.
