--- a/monitoring/docker-compose.mysecure.yml
+++ b/monitoring/docker-compose.mysecure.yml
@@ -21,7 +21,7 @@ services:
       - default 
       - reverse-proxy
     volumes:
-      - prometheus_storage:/prometheus
+      - prometheus_storage:/data
     environment:
       - VIRTUAL_HOST=prometheus.${DNS_SUFFIX:-local}
       - LETSENCRYPT_HOST=prometheus.${DNS_SUFFIX:-local}
