cleanup dos characters; enable time capability for node exporter; new error spike rule

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -9,6 +9,8 @@ services:
 
   # Runs on your node(s) and forwards node(host) metrics to Prometheus.
   master-nodeexporter:
+    cap_add:
+      - SYS_TIME
     image: prom/node-exporter:v0.17.0
     expose:
       - 9100
