--- a/monitoring/prometheus/rules/alert.rules_containers.yml
+++ b/monitoring/prometheus/rules/alert.rules_containers.yml
@@ -3,21 +3,21 @@ groups:
   rules:
   - alert: high_cpu_usage_on_container
     expr: sum by(name, host) (rate(container_cpu_usage_seconds_total{name=~".+"}[5m]))
-      * 100 > 100
+      * 100 > 200
     for: 5m
     annotations:
       description: '{{ $labels.name }} is using a LOT of CPU. CPU usage is {{ humanize
         $value}}%.'
       summary: 'HIGH CPU USAGE WARNING: CONTAINER ''{{ $labels.name }}'' on ''{{ $labels.host
         }}'''
-  - alert: container_eating_memory
-    expr: sum by(host, name) (container_memory_usage_bytes{name=~".+"}) > 2000000000
-    for: 5m
-    annotations:
-      description: '{{ $labels.name }} is eating up a LOT of memory. Memory consumption
-        of {{ $labels.name }} is at {{ humanize $value}}.'
-      summary: 'HIGH MEMORY USAGE WARNING: CONTAINER ''{{ $labels.name }}'' on ''{{
-        $labels.host }}'''
+#  - alert: container_eating_memory
+#    expr: sum by(host, name) (container_memory_usage_bytes{name=~".+"}) > 10000000000
+#    for: 5m
+#    annotations:
+#      description: '{{ $labels.name }} is eating up a LOT of memory. Memory consumption
+#        of {{ $labels.name }} is at {{ humanize $value}}.'
+#      summary: 'HIGH MEMORY USAGE WARNING: CONTAINER ''{{ $labels.name }}'' on ''{{
+#        $labels.host }}'''
   - alert: container_down_monlog
     expr: (absent(container_memory_usage_bytes{name="logging_elasticsearch_1"}) or
       absent(container_memory_usage_bytes{name="monitoring_prometheus_1"}))
